<resources>
    <string name="abc">Course Registration</string>
    <string name="app_name">Course Registration</string>
    <string name="hint_text">hint</string>
    <string name="intromessage">Choose the year or the Department whose courses you would like to select.</string>
    <string name="lewislogo">lewisLogo</string>
    <string name="view_classes_button">View Classes</string>
    <string name="register_for_classes_button">Register for Classes</string>
    <string name="drop_classes_button">Drop Classes</string>
    <string name="view_schedule_button">View Schedule</string>
    <string name="drop_class_header">Drop Class</string>
    <string name="view_schedule_header">View Schedule</string>
    <string name="drop_classes_header">Drop Classes</string>
    <string name="view_classes_header">View Classes</string>
    <string name="register_for_class_header">Register for Classes</string>
    <string name="course_registration_header">Course Registration</string>
    <string name="course_name">course name</string>
    <string name="course_number">Course Number</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_instructor">Enter Instructor</string>
    <string name="registration_form">Registration Form</string>
    <string name="enter_course_name_edit_text">Enter Course Name</string>
    <string name="enter_instructor_name">Enter Instructor Name</string>
    <string name="enter_course_number">Enter Course Number</string>
    <string name="enter_credit_hours">Enter Credit Hours</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="enter_student_id_number">Enter Student ID Number</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">Delete</string>
    <string name="drop_class">Drop Class</string>
    <string name="add">add</string>
    <string name="course_name_text_view">Course Name</string>
    <string name="course_number_text_view">Course Number Text View</string>
    <string name="instructor">Instructor</string>
    <string name="credit_hours_text_view">Credit Hours</string>
    <string name="drop">Drop</string>
    <string name="instruc">instructor</string>
    <string name="regcourseimg">regcourseimg</string>
</resources>